# universal-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  codereview.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  ruff.toml
src/: cli.py  main.py
src/api/telegram/: bot_run.py
src/api/telegram/keyboards/: admin_keyboard.py
src/api/telegram/router/: admin_handlers.py  system_commands.py
src/backend_component/application/ai_chat/: ai_provider.py
src/backend_component/application/storage/: storage_provider.py
src/backend_component/composition/configuration/: config.py
src/backend_component/domain/entity/: chat.py  common.py  user.py
src/backend_component/domain/value_object/: common.py
src/backend_component/infrastructure/minio/: minio_client.py  storage.py
src/backend_component/infrastructure/mongodb/: collections.py  connect.py
src/backend_component/infrastructure/openai/: openai.py
src/backend_component/infrastructure/redis/: redis_client.py
src/backend_component/presentation/telegram/: bot_run.py
src/clients/: __init__.py  minio_client.py  openai.py  openai_client.py  redis_client.py
src/core/: config.py  db.py
src/managers/: admin.py  base.py  mian_manager.py
src/schemas/: chat.py  content_types.py  db_chat.py  message_roles.py  user.py  user_roles.py
src/schemas/documents/: action.py  chat.py
src/sсhemas/: chat.py
src/universal_bot/composition/: api_app.py
src/universal_bot/composition/configuration/: config.py
src/universal_bot/composition/ioc/: application.py  configuration.py  infrastructure.py  provider_registry.py
src/universal_bot/domain/: exception.py
src/universal_bot/domain/common/: util.py
src/universal_bot/domain/entity/: chat.py  common.py  message_bucket.py  user.py
src/universal_bot/domain/service/: user_permission.py
src/universal_bot/domain/value_object/: common.py
src/universal_bot/infrastructure/: exeption.py
src/universal_bot/infrastructure/minio/: exeption.py  storage.py
src/universal_bot/infrastructure/mongodb/: collections.py  (+2 more)
src/utils/: connect_retry.py
tests/: test_minio_client.py  test_openai_client.py
tests/integraation/: test_redis_client.py
tests/integration/: mongodb copy.py  test_mongodb.py  test_redis_client.py
tests/unit/: test_minio_client.py  test_openai_client.py
(+130 files in other folders)
